--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -150,13 +150,15 @@ body {
 
 .container {
     max-width: 1600px;
+    background-color: rgb(245,246,248);
 }
 
 header {
     width: auto;
     height: 100vh;
     padding-top: 10px;
-    padding-left: 315px;
+    padding-left: (315 / 1600) * 100%;
+    background-color: rgb(245,246,248);
     @include bg-img('../img/main-img.png', cover, no-repeat, $position: center center);
     & .main-text {
         max-width: 400px;
@@ -195,7 +197,7 @@ nav {
     display: flex;
     justify-content: space-between;
     width: 690px;
-    margin-left: 10%;
+    margin-left: (275 / 1270) * 100%;
     // height: 50px;
 }
 
@@ -272,16 +274,19 @@ nav {
     @include lists($display:none, $txt-a: $ta, $line-h: 30px, $list-s: $none);
 }
 
+main {
+    background-color: rgb(245,246,248);
+}
+
 .features-big-icon {
     @include flex-box($justify:space-between, $aitem:none);
-    max-width: 960px;
+    max-width: 920px;
     height: 280px;
     padding-top: 10px;
     margin: auto;
     & div {
         @include txt-columns();
         text-align: center;
-        width: 275px;
         height: 100%;
         & span {
             display: inline-block;
@@ -298,12 +303,14 @@ nav {
             height: 95px;
             line-height: 1.6;
         }
-        &:nth-of-type(1) {
+        &:nth-of-type(odd) {
+            width: 250px;
             & p {
-                width: 260px;
+                letter-spacing: -0.1px;
             }
         }
         &:nth-of-type(2) {
+            width: 275px;
             & span {
                 transform: translateY(-10px);
             }
@@ -314,22 +321,24 @@ nav {
                 margin: auto;
                 margin-top: 12px;
             }
+            & p {
+                margin-top: 5.7%;
+            }
         }
         &:nth-of-type(3) {
             & h3 {
+                width: 260px;
                 line-height: 40px;
                 &::after {
                     @include info;
                 }
-            }
-            & p {
-                width: 260px;
             }
         }
         & button {
             @include buttons($bg-color: none, $color: $black, $line-h: 20px);
             width: 100px;
             height: 20px;
+            background:none;
             cursor: pointer;
             &:hover {
                 text-decoration: underline;
@@ -341,12 +350,12 @@ nav {
 
 .iphone-block {
     width: $w100;
-    height: 100vh;
+    // height: 100vh;
     margin-top: 128px; 
     position: relative;
     background: {
         image: url(../img/snow-montain.jpg);
-        size: contain;
+        size: cover;
         repeat: no-repeat;
     }
     & .device {
@@ -364,28 +373,26 @@ nav {
 }
 
 #device-img {
+    @include bg-img($url: "../img/Device-non-screen.png",$bgsize: contain, $repeat: no-repeat, $position: center center);
+    width: 66.8%; 
+    height: 77%;
     position: absolute;
     z-index: 2;
     display:inline-block;
-    transform: rotate(1deg);
+    perspective: 400px;
 }
 
 #iphone-slider {
-    // display: none;
     position: absolute;
     z-index: 3;
-    width: 26%;
-    height: 645px;
-    // border: 1px solid #333333;
-    transform: translate(290px, 47px) rotate(-57deg) skew(-8.3deg, 22deg);
-    // transform-origin: 50% 0;
+    width: 240px;
+    height: 82.2%;
+    background-color: transparent;
+    transform: translate(64%, 39.9%) rotateX(3deg) rotateY(0deg) rotate(-37deg) skew(12deg);
+    transform-origin: 0% 0% 0;
     & div {
         // width: 100%;
-        height: inherit;
-        // border: 1px solid #fff;
-        // @include bg-img('', 100%, no-repeat);
-        // @include bg-img(img/tunnel-640.jpg, cover, no-repeat);
-        // @include bg-img(img/matterhorn1280.jpg, cover, no-repeat);
+        height: 100%;
     }
 }
 .slick-prev .slick-arrow {
@@ -394,27 +401,122 @@ nav {
 }
 
 .our-development {
-    @include flex-box($justify: space-around, $aitem:center, $flex-dir:column);
+    @include flex-box($justify: flex-start, $aitem:none, $flex-dir:column);
     @include txt-columns();
     position: absolute;
     top: 0;
     right: 0;
     width: 386px;
-    height: 674px;
+    max-height: 674px;
+    padding-top: 40px;
     border-radius: $br-r;
     border:1px solid #000;
     background-color: #fff;
+    text-align: $ta-l;
+    & h3 {
+        display: inline-block;
+        width: 170px;
+        margin-top: 14px;
+        padding-left: 16px;
+        font-size: $fz-h3;
+        text-transform: none;
+    }
+    & p {
+        width: 230px;
+        margin-top: -47px;
+        padding-left: 85px;
+        line-height: 1.5;
+    }
+    & :first-child p  {
+        margin-top: -24px;
+    }
+    &__btn {
+        display: block;
+        width: $w100;
+        height: 60px;
+        margin-top: 23px;
+        border:$none;
+        background-color: $black;
+        text-transform: $ttr-up;
+        line-height: 60px;
+        color: $white;
+    }
 }
 
-.our-development__btn {
-    display: block;
-    width: $w100;
-    height: 60px;
-    border:$none;
-    background-color: $black;
-    text-transform: $ttr-up;
-    line-height: 60px;
-    color: $white;
+.browsers,
+.briefcase,
+.be-artist {
+        max-width: 350px;
+        padding-left: 35px;
+        margin-bottom: 25px;
+       & span {
+           display: inline-block;
+           width: 40px;
+           height: 100px;
+           margin-right: 24px;
+           vertical-align: top;
+       }
+}
+
+.briefcase {
+    & h3 {
+        width: 220px;
+    }
+}
+
+.build-beautiful {
+    padding-top: 100px;
+    margin-bottom: 100px;
+    background-color:#fff;
+    text-align: $ta;
+    &__bg {
+        box-sizing: border-box;
+    }
+    & h2 {
+        margin: auto;
+        font: {
+            family: $ff-head;
+            size: $fz-h2;
+            weight: $fw-l;
+        }
+    }
+    & p {
+        max-width: 450px;
+        margin: 45px auto;
+        font-size: $fz-h3;
+        line-height: 1.4;
+        color: $lightblack;
+    }
+    &__item {
+        @include flex-box($justify: space-between, $aitem:none, $flex-dir:none);
+        @include txt-columns();
+        max-width: 960px;
+        margin: 100px auto;
+        padding-top: 95px;
+        text-align: $ta-l;
+        & h3 {
+            text-transform: capitalize;
+        }
+        & p {
+            width: 235px;
+            height: 155px;
+            margin: 25px auto 0;
+            line-height: 1.6;
+        }
+        & button {
+            @include buttons($bg-color: none, $color: $black, $line-h: 20px);
+            width: 100px;
+            height: 20px;
+            margin-left: -8px;
+            background:none;
+            text-align: $ta-l;
+            cursor: pointer;
+            &:hover {
+                text-decoration: underline;
+                text-decoration-color: $bgc-turquoise;
+            }
+        }
+    }
 }
 
 .ipad-block {
@@ -487,93 +589,131 @@ nav {
     @include buttons();
 }
 
-.build-beautiful {
-    height: 100vh;
-    // margin-top: 0;
-    padding-top: 80px;
-    text-align: $ta;
-    & h2 {
-        margin: auto;
-        font: {
-            family: $ff-head;
-            size: $fz-h2;
-            weight: $fw-l;
-        }
-    }
-    & p {
-        max-width: 450px;
-        margin: 45px auto;
-        font-size: $fz-h3;
-        color: $lightblack;
-    }
-    &__item {
-        @include flex-box($justify: space-between, $aitem:none, $flex-dir:none);
-        @include txt-columns();
-        max-width: 960px;
-        margin: auto;
-        margin-top: 200px;
-        text-align: $ta-l;
-        & h3 {
-            text-transform: capitalize;
-        }
-        & p {
-            width: 235px;
-            height: 155px;
-            margin: 25px auto 0;
-            line-height: 1.6;
-        }
-        & button {
-            @include buttons($bg-color: none, $color: $black, $line-h: 20px);
-            width: 100px;
-            height: 20px;
-            margin-left: -8px;
-            // padding-left: 0;
-            text-align: $ta-l;
-            cursor: pointer;
-            &:hover {
-                text-decoration: underline;
-                text-decoration-color: $bgc-turquoise;
-            }
-        }
-    }
-}
-
-
 .platform-features {
     max-width: 960px;
     margin: 160px auto;
     @include flex-box($justify: space-between, $aitem:none, $flex-dir:column);
     &__head {
         margin-bottom: 60px;
-       & p:nth-of-type(n) {
+        & p:nth-of-type(n) {
         text-align: $ta;
         width: 80%;
+        padding-bottom: 20px;
         margin: auto;
         }
+        & p:first-of-type {
+            padding-bottom: 40px;
+            font-size: $fz-link;
+            text-transform: $ttr-up;
+        }
+        & p:last-of-type {
+            font-size: $fz-h3;
+            line-height: 1.4;
+            color: $lightblack;
+        } 
     }
     &__block1, 
     &__block2 {
         height: 250px;
         @include flex-box($justify:space-between, $aitem:none, $flex-dir:none);
         @include txt-columns();
+        text-align: $ta-l;
+        & section {
+            & h3 {
+                display: inline-block;
+                margin: 0;
+                vertical-align: top;
+                font-size: $fz-h3;
+                text-transform: capitalize;
+            }
+            & p {
+                max-width: 200px;
+                margin-top: -30px;
+                margin-left: 84px;
+                line-height: 1.6;
+            }
+        }
+    }
+    &__icon {
+        display: inline-block;
+        width: 21.5%;
+        height: 65px;
+        margin-right: 7%;
+        text-align: $ta;
+        }
+    }
+    
+.quotes {
+    position: relative;
+    width: auto;
+    height: 400px;
+    overflow: hidden;
+    // @include flex-box($justify: space-between, $aitem: none, $flex-dir:none);
+    & blockquote:nth-of-type(odd) {
+        & p {
+            width: 89%;
+            padding-right: 5.5%;
+            padding-left: 5.5%;
+        }
+    }
+    & blockquote:nth-of-type(1) {
+        left: -26.1%;
+    }
+    & blockquote:nth-of-type(2) {
+        left: 50%;
+        transform: translate(-50%);
+        z-index: 1;
+        & p {
+            width: 72%;
+            margin: auto;
+            padding: {
+                right: 14%;
+                left: 14%;
+            }
+        }
+    }
+    & blockquote:nth-of-type(3) {
+        right: -26.3%;
+    }
+    &__top {
+        top: 40px;
+        left: 40px;
+    }
+    &__bottom {
+        bottom: 40px;
+        right: 40px;
     }
 }
 
-.quotes {
-    @include flex-box($justify: space-between, $aitem: none, $flex-dir:none);
-}
-
 blockquote {
-    max-width: 546px;
-    font-family: $ff-monthairl;
-    font-size: $fz-quote;
-    text-align: $ta;
-    color: $lightblack;
+    position: absolute;
+    margin: {
+        left: 0;
+        right: 0;
+    }
+    max-width: 795px;
+    height: 385px;
+    box-sizing: border-box;
+    border-radius: $br-r;
+    background-color: #fff;
+    & span {
+        position: absolute;
+    }
+    & p {
+        margin: auto 0 auto;
+        padding-top: 75px;
+        padding-bottom: 38px;
+        font-family: $ff-monthairl;
+        font-size: $fz-quote;
+        line-height: 1.2;
+        text-align: $ta;
+        color: $lightblack;
+    }
     & cite {
         font: {
             size: $fz-link;
             style: normal;
-            weight: 600;
+            weight: 400;
         }
         text: {
             align: $ta;
@@ -587,35 +727,48 @@ blockquote {
 
 .doitby-yourself {
     width: $w100;
-    // @include flex-box;
-    & div {
-        display: inline-block;
-    }
     h3 {
         display: inline-block;
         $ff-montblack:$fw-b;
         font-size: (26 / 16) + rem;
         text-align: $ta;
     }
-    & #img-block {
+    #doitby-yoursalf__img-b {
+        width: auto;
+        max-height: 1200px;
         display: flex;
-        flex-direction: column;
-        justify-content: space-around;
         align-items: center;
-        width: 1100px;
-    }
+        justify-content: space-between;
+        // width: 1100px;
+       }
+
+       &__img-b1 {
+           align-self: flex-end;
+       }
+       &__img-b2 div:nth-of-type(n) {
+            // max-width: 1122px;
+            // max-height: 1200px;
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            // flex-direction: column;
+        }
+        &__img-b3 {
+            align-self: baseline;
+        }
 }
 
 .img-computer-table {
     width: 209px;
     height: 425px;
-    float: left;
+    // float: left;
     @include bg-img('../img/photo2.png', 100%, no-repeat);
 }
 
 .img-human {
     width: 305px;
     height: 425px;
+    margin-bottom: 100px;
     @include bg-img("../img/photo7.png", 100%, no-repeat);
 }
 
@@ -628,7 +781,7 @@ blockquote {
 .img-snow-mountan {
     width: 960px;
     height: 200px;
-    margin: auto;
+    // margin: auto;
     @include bg-img("../img/photo1.png", 100%, no-repeat);
 }
 
@@ -641,32 +794,32 @@ blockquote {
 .img-room {
     width: 470px;
     height: 455px;
+    margin-top: 70px;
     @include bg-img("../img/photo6.png", 100%, no-repeat);
 }
 
 .img-birds {
     width: 178px;
     height: 422px;
-    // float: right;
-    // display: flex;
-    // justify-content: flex-end;
     @include bg-img("../img/photo5.png", 100%, no-repeat);
 }
 
 .join-over {
     text-align: $ta;
-    & h2 {
+        & h2 {
+        padding: 77px;
+        background-color: #fff;
         font: {
             family: $ff-monthairl;
             weight: $fw-l;
             size: $fz-h2;
         }
-        padding-bottom: 95px;
     }
 }
 
 .prices {
     width: 930px;
+    padding-bottom: 130px;
     margin: auto;
     @include flex-box($justify:space-between, $aitem:none, $flex-dir:none);
     h3, p, a {
@@ -721,20 +874,31 @@ blockquote {
 }
 
 footer {
-    height: 100vh;
-        @include bg-img("../img/footer-bg.png", 100%, no-repeat);
-        position: center center;
+    height: 880px;
+    @include bg-img("../img/footer-bg.png", contain, no-repeat);
+    background-position: center bottom;
     & h5 {
+        width: 960px;
+        height: 220px;
+        padding-right: 85px;
+        padding-left: 85px;
+        margin: 0 auto;
         font-family: $ff-montblack;
         $ff-montblack: $fw-b;
         font-size: $fz-h5-xl;
         text-transform: $ttr-up;
         text-align: $ta-r;
-        line-height: 1.08; 
-        letter-spacing: 5px;
+        line-height: 1.3; 
+        letter-spacing: -.5px;
+        word-spacing: 1px;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -ms-background-clip: text;
+        -o-background-clip: text;
         background: {
             image: url('../img/bg-footer.jpg');
-            position: -4px -149px;
+            position: -85px -90px;
+            // position: center top;
             size: cover;
             repeat: no-repeat;
             clip: text;
@@ -745,8 +909,9 @@ footer {
 
 .footer-content-bg {
     max-width: 960px;
+    // max-width: (1600 / 26.6) + vw;
     height: 282px;
-    margin: auto;
+    margin: 250px auto 0;
     background-color: $black;
     border-radius: $br-r;
 }
