--- a/src/css/slick.css
+++ b/src/css/slick.css
@@ -4,6 +4,7 @@
     position: relative;
 
     display: block;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 
     -webkit-user-select: none;
@@ -42,9 +43,7 @@
 .slick-slider .slick-list
 {
     -webkit-transform: translate3d(0, 0, 0);
-       -moz-transform: translate3d(0, 0, 0);
         -ms-transform: translate3d(0, 0, 0);
-         -o-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
 }
 
